--- a/docker-conf/nginx/default.conf
+++ b/docker-conf/nginx/default.conf
@@ -1,7 +1,9 @@
 server {
     listen 80;
     server_name localhost;
-    root /var/www/public;
+    
+    # IMPORTANTE: Ahora apunta a /html/public
+    root /var/www/html/public;
     index index.php index.html;
 
     error_log  /var/log/nginx/error.log;
@@ -11,19 +13,17 @@ server {
         try_files $uri $uri/ /index.php?$query_string;
     }
 
-    # Configuración optimizada para PHP
     location ~ \.php$ {
         fastcgi_pass app:9000;
+        # Esto le dice a PHP dónde buscar el archivo físico
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         include fastcgi_params;
-        # Estas líneas son las que daban problemas, las definimos con cuidado:
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
         fastcgi_intercept_errors off;
         fastcgi_buffer_size 16k;
         fastcgi_buffers 4 16k;
     }
 
-    # Proxy para Vite
     location /@vite/client {
         proxy_pass http://web:5173;
         proxy_http_version 1.1;
