--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,13 +8,14 @@ services:
     restart: unless-stopped
     volumes:
       # Repositorio 1: El Laboratorio (App de prueba)
-      - .:/var/www
+      - .:/var/www/html
       # Repositorio 2: El Paquete PHP (Mapeado para que Composer lo vea local)
       - ../time-laravel-pkg:/var/www/time-laravel-pkg
       # Repositorio 3: La Librería Vue (Mapeado para que Vite lo vea local)
       - ../Time:/var/www/time-ui-pkg
     networks:
       - time-net
+    working_dir: /var/www/html # <--- ASEGURAR ESTO
 
   # 2. El Portero (Nginx)
   web:
@@ -25,7 +26,7 @@ services:
       - "8090:80"        # URL: http://localhost:8090
       - "5174:5173"      # Vite Dev Server
     volumes:
-      - .:/var/www
+      - .:/var/www/html
       - ./docker-conf/nginx/default.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - app
